<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disaster News</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_disaster_timeline">DisasterTimelineActivity</string>
    <string name="title_activity_setting_countries">SettingCountriesActivity</string>
    <string name="title_activity_setting_disaster_type">SettingDisasterTypeActivity</string>
    <string name="title_activity_setting_disaster_types">SettingDisasterTypesActivity</string>
    <string name="title_activity_disaster_details">DisasterDetailsActivity</string>
    <string name="stream_disaster_type">type</string>
    <string name="stream_disaster_country">country</string>
    <string name="stream_disaster_name">name</string>
    <string name="details_disaster_name">name</string>
    <string name="details_disaster_description">description</string>
    <string name="details_disaster_url">url</string>
    <string name="details_disaster_date">date</string>
    <string name="details_disaster_picture">picture</string>
    <string name="stream_disaster_date">date</string>
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>

</resources>
