<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.disasternews.DisasterDetailsActivity$PlaceholderFragment" >

    
    <!-- 
        This layout goes inside the details view for an activity.
     -->
     
    <ImageView
        android:id="@+id/ivDisasterImage"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/details_disaster_picture"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivDisasterImage"
        android:text="@string/details_disaster_name" />
        
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:text="@string/details_disaster_description" />
        
    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:text="@string/details_disaster_url" />
    
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUrl"
        android:layout_alignParentLeft="true"
        android:text="@string/details_disaster_date" />

</RelativeLayout>
