<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants" >

    <!-- 
        This layout goes inside the array adapter and is shown on the stream view.
     -->

    <ImageView
        android:id="@+id/ivDisasterIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvStreamDisasterType"
        android:layout_alignTop="@+id/ivDisasterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#575757"
        android:layout_toRightOf="@+id/ivDisasterIcon"
        android:text="@string/stream_disaster_type" />

    <TextView
        android:id="@+id/tvStreamDisasterCountry"
        android:layout_alignTop="@+id/ivDisasterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:textColor="#575757"
        android:textSize="18sp"
        android:maxLines="1"
        android:maxLength="15"
        android:text="@string/stream_disaster_country" />

    <TextView
        android:id="@+id/tvStreamDisasterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvStreamDisasterType"
        android:layout_below="@+id/tvStreamDisasterType"
        android:textColor="#575757"
        android:textSize="16sp"
        android:maxLines="1"
        android:maxLength="30"
        android:text="@string/stream_disaster_name" />

    <TextView
        android:id="@+id/tvStreamDisasterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#575757"
        android:layout_alignLeft="@+id/tvStreamDisasterType"
        android:layout_below="@+id/tvStreamDisasterName"
        android:text="@string/stream_disaster_date" />

    <ImageButton
        android:id="@+id/tvStreamDisasterFavoriteButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignTop="@+id/tvStreamDisasterDate"
        android:layout_alignRight="@+id/tvStreamDisasterCountry"
        android:layout_marginRight="80dp"
        android:background="@null"
        android:src="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/tvStreamDisasterRetweetButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignTop="@+id/tvStreamDisasterDate"
        android:layout_alignLeft="@+id/tvStreamDisasterType"
        android:layout_marginLeft="80dp"
        android:background="@null"
        android:src="@drawable/ic_action_next" />

</RelativeLayout>
